<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/itemRow">

    <androidx.cardview.widget.CardView
        android:id="@+id/cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/pictureBestSeller"
                android:padding="5dp"
                android:src="@drawable/Brokoli_t"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:id="@+id/titleNameBestSeller"
                    android:maxLines="1"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga"
                    android:textStyle="italic"
                    android:id="@+id/descBestSeller"
                    android:maxLines="1"
                    android:textSize="@dimen/_20dp"
                    android:textColor="#ef6650"
                    android:layout_marginTop="20dp" />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tambahkan"
                    />


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>